tdf#134477 add VclMessageType::Other to indicate image-less generic InfoBox

Change-Id: I76e86bf4d82b33771ea2900517712be57ae7f03d